Codec_6/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Codec_6_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:14: error: cannot find symbol
import org.apache.commons.codec.binary.Base64InputStream;
                                      ^
  symbol:   class Base64InputStream
  location: package org.apache.commons.codec.binary
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:26: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:26: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:36: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true, (byte)0, byteArray0);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:36: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true, (byte)0, byteArray0);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:46: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:46: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:47: error: cannot find symbol
      Base64InputStream base64InputStream1 = new Base64InputStream(base64InputStream0, false);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:47: error: cannot find symbol
      Base64InputStream base64InputStream1 = new Base64InputStream(base64InputStream0, false);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:57: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:57: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:75: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:75: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:93: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:93: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:111: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:111: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:129: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:129: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:147: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:147: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:156: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:156: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0, true);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:167: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0);
      ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Codec_6/Codec/evosuite/3/org/apache/commons/codec/binary/Base64InputStream_ESTest.java:167: error: cannot find symbol
      Base64InputStream base64InputStream0 = new Base64InputStream(byteArrayInputStream0);
                                                 ^
  symbol:   class Base64InputStream
  location: class Base64InputStream_ESTest
25 errors
